feat: add support for additional model environments and update start-model script

--- a/tools/tdgpt/cfg/taosanode.ini
+++ b/tools/tdgpt/cfg/taosanode.ini
@@ -73,11 +73,17 @@ stats = 0.0.0.0:8387
 # python virtual environment directory
 virtualenv = /var/lib/taos/taosanode/venv/
 
+# set timesfm model env
+timesfm_venv = /var/lib/taos/taosanode/timesfm_venv
+
+# moirai model env
+moirai_venv = /var/lib/taos/taosanode/moirai_venv
+
 # set transformers:4.55.0
-chronos_venv_dir = /var/lib/taos/taosanode/venv_chronos
+chronos_venv = /var/lib/taos/taosanode/chronos_venv
 
 # set transformers:4.33.0
-momentfm_venv_dir = /var/lib/taos/taosanode/venv_momentfm
+momentfm_venv = /var/lib/taos/taosanode/momentfm_venv
 
 [taosanode]
 # default app log file
