--- a/utils/test/c/CMakeLists.txt
+++ b/utils/test/c/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(tmq_td35698 tmq_td35698.c)
 add_executable(tmq_td33798 tmq_td33798.c)
 add_executable(tmq_td37265 tmq_td37265.c)
 add_executable(tmq_ts7402 tmq_ts7402.c)
+add_executable(tmq_alter_tag tmq_alter_tag.c)
 add_executable(tmq_poll_test tmq_poll_test.c)
 add_executable(tmq_write_raw_test tmq_write_raw_test.c)
 add_executable(write_raw_block_test write_raw_block_test.c)
@@ -73,6 +74,14 @@ target_link_libraries(
 
 target_link_libraries(
     tmq_ts5466
+    PUBLIC ${TAOS_NATIVE_LIB}
+    PUBLIC util
+    PUBLIC common
+    PUBLIC os
+)
+
+target_link_libraries(
+    tmq_alter_tag
     PUBLIC ${TAOS_NATIVE_LIB}
     PUBLIC util
     PUBLIC common
