--- a/source/dnode/mgmt/node_mgmt/CMakeLists.txt
+++ b/source/dnode/mgmt/node_mgmt/CMakeLists.txt
@@ -4,6 +4,11 @@ target_link_libraries(
   dnode PUBLIC mgmt_mnode mgmt_qnode mgmt_snode mgmt_bnode mgmt_vnode mgmt_dnode monitorfw tss crypt
 )
 
+if(TD_ENTERPRISE AND TD_HAS_OPENSSL)
+  # Link taosk library for encryption key management (requires OpenSSL)
+  target_link_libraries(dnode PUBLIC taosk)
+endif()
+
 IF(TD_ENTERPRISE)
   IF(${BUILD_WITH_S3})
     add_definitions(-DUSE_S3)
@@ -21,7 +26,8 @@ target_include_directories(
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
 
-if(TD_ENTERPRISE)
+if(TD_ENTERPRISE AND TD_HAS_OPENSSL)
+  # Include taosk headers for encryption key management (requires OpenSSL)
   target_include_directories(
     dnode
     PRIVATE "${TD_ENTERPRISE_DIR}/src/plugins/taosk/inc"
