feat: add check for encrypt key.

--- a/source/dnode/mgmt/node_mgmt/CMakeLists.txt
+++ b/source/dnode/mgmt/node_mgmt/CMakeLists.txt
@@ -4,8 +4,8 @@ target_link_libraries(
   dnode PUBLIC mgmt_mnode mgmt_qnode mgmt_snode mgmt_bnode mgmt_vnode mgmt_dnode monitorfw tss crypt
 )
 
-if(TD_ENTERPRISE AND TD_HAS_OPENSSL)
-  # Link taosk library for encryption key management (requires OpenSSL)
+if(TD_ENTERPRISE)
+  # Link taosk library for encryption key management (now using community CBC encryption)
   target_link_libraries(dnode PUBLIC taosk)
 endif()
 
@@ -26,8 +26,8 @@ target_include_directories(
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
 
-if(TD_ENTERPRISE AND TD_HAS_OPENSSL)
-  # Include taosk headers for encryption key management (requires OpenSSL)
+if(TD_ENTERPRISE)
+  # Include taosk headers for encryption key management (now using community CBC encryption)
   target_include_directories(
     dnode
     PRIVATE "${TD_ENTERPRISE_DIR}/src/plugins/taosk/inc"
