--- a/tools/tdgpt/cfg/taosanode.ini
+++ b/tools/tdgpt/cfg/taosanode.ini
@@ -71,14 +71,26 @@ logto = /var/log/taos/taosanode/taosanode.log
 stats = 0.0.0.0:8387
 
 # python virtual environment directory
-virtualenv = /usr/local/taos/taosanode/venv/
+virtualenv = /var/lib/taos/taosanode/venv/
+
+# set timesfm model env
+timesfm_venv = /var/lib/taos/taosanode/timesfm_venv
+
+# moirai model env
+moirai_venv = /var/lib/taos/taosanode/moirai_venv
+
+# set transformers:4.55.0
+chronos_venv = /var/lib/taos/taosanode/chronos_venv
+
+# set transformers:4.33.0
+momentfm_venv = /var/lib/taos/taosanode/momentfm_venv
 
 [taosanode]
 # default app log file
 app-log = /var/log/taos/taosanode/taosanode.app.log
 
 # model storage directory
-model-dir = /usr/local/taos/taosanode/model/
+model-dir = /var/lib/taos/taosanode/model/
 
 # default log level
 log-level = DEBUG
