--- a/source/dnode/mnode/impl/test/CMakeLists.txt
+++ b/source/dnode/mnode/impl/test/CMakeLists.txt
@@ -15,5 +15,6 @@ add_subdirectory(snode)
 add_subdirectory(stb)
 add_subdirectory(topic)
 add_subdirectory(trans)
+add_subdirectory(xnode)
 #add_subdirectory(user)
 #add_subdirectory(mnode)
