--- a/source/libs/scalar/CMakeLists.txt
+++ b/source/libs/scalar/CMakeLists.txt
@@ -5,6 +5,7 @@ target_include_directories(
     scalar
     PUBLIC "${TD_SOURCE_DIR}/include/libs/scalar"
     PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
+    PRIVATE "${TD_SOURCE_DIR}/source/libs/totp/inc"
 )
 
 target_link_libraries(scalar
@@ -17,6 +18,7 @@ target_link_libraries(scalar
     PRIVATE parser
     PRIVATE geometry
     PRIVATE decimal
+    PRIVATE totp
 )
 
 if(${BUILD_TEST})
