rebalance support where clause

--- a/source/dnode/mnode/impl/test/xnode/CMakeLists.txt
+++ b/source/dnode/mnode/impl/test/xnode/CMakeLists.txt
@@ -94,6 +94,8 @@ target_link_libraries(xnodeProductionTest
     PUBLIC gtest_main
     PUBLIC pthread
     mnode
+    xnode
+    mgmt_xnode 
 )
 
 add_test(
