--- a/source/dnode/mgmt/node_util/CMakeLists.txt
+++ b/source/dnode/mgmt/node_util/CMakeLists.txt
@@ -5,6 +5,14 @@ target_include_directories(
     PUBLIC "${TD_SOURCE_DIR}/include/dnode/mgmt"
     PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
+if(TD_ENTERPRISE)
+  # Include taosk headers for encryption key management (now using community CBC encryption)
+  target_include_directories(
+    node_util
+    PRIVATE "${TD_ENTERPRISE_DIR}/src/plugins/taosk/inc"
+  )
+endif()
+
 target_link_libraries(
     node_util mnode vnode qnode snode bnode wal sync ${TAOS_NATIVE_LIB_STATIC} tfs monitor monitorfw metrics
 )
