--- a/source/dnode/mnode/impl/CMakeLists.txt
+++ b/source/dnode/mnode/impl/CMakeLists.txt
@@ -31,6 +31,13 @@ target_include_directories(
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
   PUBLIC "${TD_SOURCE_DIR}/source/libs/totp/inc"
 )
+
+if(TD_ENTERPRISE)
+  target_include_directories(
+    mnode
+    PRIVATE "${TD_ENTERPRISE_DIR}/src/plugins/taosk/inc"
+  )
+endif()
 target_link_libraries(
   mnode scheduler sdb wal transport sync monitor executor qworker new-stream parser audit monitorfw totp
 )
