--- a/source/dnode/mgmt/node_mgmt/CMakeLists.txt
+++ b/source/dnode/mgmt/node_mgmt/CMakeLists.txt
@@ -4,6 +4,11 @@ target_link_libraries(
   dnode PUBLIC mgmt_mnode mgmt_qnode mgmt_snode mgmt_bnode mgmt_vnode mgmt_dnode monitorfw tss crypt totp
 )
 
+if(TD_ENTERPRISE AND ${TD_LINUX})
+  # Link taosk library for encryption key management (only supported on Linux)
+  target_link_libraries(dnode PUBLIC taosk)
+endif()
+
 IF(TD_ENTERPRISE)
   IF(${BUILD_WITH_S3})
     add_definitions(-DUSE_S3)
@@ -20,3 +25,11 @@ target_include_directories(
   dnode
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
+
+if(TD_ENTERPRISE AND ${TD_LINUX})
+  # Include taosk headers for encryption key management (only supported on Linux)
+  target_include_directories(
+    dnode
+    PRIVATE "${TD_ENTERPRISE_DIR}/src/plugins/taosk/inc"
+  )
+endif()
