feat(docker): enhance venv4-builder to conditionally install torch and tensorflow packages

--- a/packaging/docker/DockerfileTDgpt.base
+++ b/packaging/docker/DockerfileTDgpt.base
@@ -78,10 +78,20 @@ RUN python -m venv --system-site-packages $VIRTUAL_ENV && \
 
 FROM python:3.10-slim-trixie AS venv4-builder
 ARG ARCH=amd64
+
 COPY --from=base-builder /usr/local/bin /usr/local/bin
 ENV VIRTUAL_ENV=/var/lib/taos/taosanode/venv_moirai
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-RUN python -m venv --system-site-packages $VIRTUAL_ENV && \
+RUN if [ "$ARCH" = "arm64" ]; then \
+        TORCH_PKG="torch"; \
+        TORCH_INDEX="https://download.pytorch.org/whl/cpu"; \
+        TENSORFLOW_PKG="tensorflow"; \
+    else \
+        TORCH_PKG="torch==2.3.1+cpu"; \
+        TORCH_INDEX="https://download.pytorch.org/whl/cpu"; \
+        TENSORFLOW_PKG="tensorflow-cpu==2.15.0"; \
+    fi; \ 
+    python -m venv --system-site-packages $VIRTUAL_ENV && \
     pip install --no-cache-dir uni2ts flask \
         -i https://pypi.tuna.tsinghua.edu.cn/simple && \
     pip3 install --no-cache-dir $TORCH_PKG --index-url $TORCH_INDEX && \
